[SNAPSHOT]
- BREAKING: Added generic methods "addEffect" to BoomChannel, and removed specialized ones such as "addReverb".