@@ -2,8 +2,8 @@ package com.rafaskoberg.boom.effect;
 
 public abstract class BoomEffect {
 
-    public abstract void apply(int alAuxSlot);
+    public abstract void apply();
 
-    public abstract void remove(int alAuxSlot);
+    public abstract void remove();
 
 }
