@@ -1,20 +1,20 @@
 package com.rafaskoberg.boom.effect;
 
+import com.rafaskoberg.boom.BoomEffectLwjgl3;
 import com.rafaskoberg.boom.effect.distortion.DistortionData;
 
 import static org.lwjgl.openal.EXTEfx.*;
 
-public class DistortionEffectLwjgl3 extends BoomEffect {
+public class DistortionEffectLwjgl3 extends BoomEffectLwjgl3 {
     private final DistortionData data;
-    public final int alEffect;
 
     public DistortionEffectLwjgl3(DistortionData data) {
+        super();
         this.data = data;
-        this.alEffect = alGenEffects();
     }
 
     @Override
-    public void apply(int alAuxSlot) {
+    public void apply() {
         alEffecti(alEffect, AL_EFFECT_TYPE, AL_EFFECT_DISTORTION);
 
         alEffectf(alEffect, AL_DISTORTION_EDGE, data.edge);
@@ -23,11 +23,12 @@ public class DistortionEffectLwjgl3 extends BoomEffect {
         alEffectf(alEffect, AL_DISTORTION_EQCENTER, data.eqCenter);
         alEffectf(alEffect, AL_DISTORTION_EQBANDWIDTH, data.eqBandwidth);
 
+        // Set effect to aux slot
         alAuxiliaryEffectSloti(alAuxSlot, AL_EFFECTSLOT_EFFECT, alEffect);
     }
 
     @Override
-    public void remove(int alAuxSlot) {
+    public void remove() {
         alAuxiliaryEffectSloti(alAuxSlot, AL_EFFECTSLOT_EFFECT, AL_EFFECT_NULL);
     }
 
