@@ -1,20 +1,20 @@
 package com.rafaskoberg.boom.effect;
 
+import com.rafaskoberg.boom.BoomEffectLwjgl3;
 import com.rafaskoberg.boom.effect.echo.EchoData;
 
 import static org.lwjgl.openal.EXTEfx.*;
 
-public class EchoEffectLwjgl3 extends BoomEffect {
+public class EchoEffectLwjgl3 extends BoomEffectLwjgl3 {
     private final EchoData data;
-    public final int alEffect;
 
     public EchoEffectLwjgl3(EchoData data) {
+        super();
         this.data = data;
-        this.alEffect = alGenEffects();
     }
 
     @Override
-    public void apply(int alAuxSlot) {
+    public void apply() {
         alEffecti(alEffect, AL_EFFECT_TYPE, AL_EFFECT_ECHO);
 
         alEffectf(alEffect, AL_ECHO_DELAY, data.delay);
@@ -23,11 +23,12 @@ public class EchoEffectLwjgl3 extends BoomEffect {
         alEffectf(alEffect, AL_ECHO_FEEDBACK, data.feedback);
         alEffectf(alEffect, AL_ECHO_SPREAD, data.spread);
 
+        // Set effect to aux slot
         alAuxiliaryEffectSloti(alAuxSlot, AL_EFFECTSLOT_EFFECT, alEffect);
     }
 
     @Override
-    public void remove(int alAuxSlot) {
+    public void remove() {
         alAuxiliaryEffectSloti(alAuxSlot, AL_EFFECTSLOT_EFFECT, AL_EFFECT_NULL);
     }
 
